--- a/css/main.css
+++ b/css/main.css
@@ -17,6 +17,7 @@
 
 html {
   font-size: 16px;
+  font-family: "Roboto", sans-serif;
 }
 
 body {
@@ -37,6 +38,62 @@ video {
   max-inline-size: 100%;
   block-size: auto;
   vertical-align: text-top;
+}
+
+div a {
+  text-decoration: none;
+  font-size: 16px;
+}
+
+h1 {
+  font-size: 30px;
+  font-weight: 400;
+}
+
+.subtitle {
+  width: 330px;
+}
+
+header div {
+  line-height: normal;
+  font-size: 12px;
+}
+
+header h2 {
+  font-weight: 700;
+  font-size: 12px;
+}
+
+main p {
+  width: 330px;
+  line-height: 26px;
+}
+
+main a {
+  width: 88px;
+  text-align: center;
+  font-size: 12px;
+}
+
+footer {
+  background-color: black;
+  color: white;
+  font-size: 12px;
+}
+
+footer h2 {
+  font-size: 12px;
+  font-weight: 700;
+}
+
+footer p {
+  font-weight: 400;
+}
+
+.sources,
+footer a {
+  font-size: 10px;
+  font-weight: 400;
 }
 
 /* ====================================
